fixed issue with headerMenus appearing behind main container HTML elements

--- a/src/UI/menus/menuStyles/headerMenu.css
+++ b/src/UI/menus/menuStyles/headerMenu.css
@@ -5,6 +5,7 @@
   align-self: flex-end;
   height: 0px;
   width: 0px;
+  z-index: 100;
 }
 
 .header_menu_wrapper {
